@@ -22,25 +22,34 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="doc-template.xsl" />
-    <None Include="mono-rocks-docs.source" />
-    <None Include="prettyprint.js" />
-    <None Include="en\index.xml" />
-    <None Include="en\ns-Mono.Rocks.xml" />
+    <None Include="en\Mono.Rocks\CurryRocks.xml" />
     <None Include="en\Mono.Rocks\ICustomAttributeProviderRocks.xml" />
     <None Include="en\Mono.Rocks\IEnumerableRocks.xml" />
+    <None Include="en\Mono.Rocks\Int16Rocks.xml" />
     <None Include="en\Mono.Rocks\Int32Rocks.xml" />
+    <None Include="en\Mono.Rocks\Int64Rocks.xml" />
     <None Include="en\Mono.Rocks\KeyValuePairRocks.xml" />
+    <None Include="en\Mono.Rocks\Lambda.xml" />
     <None Include="en\Mono.Rocks\NaturalStringComparer.xml" />
+    <None Include="en\Mono.Rocks\NullableRocks.xml" />
     <None Include="en\Mono.Rocks\Sequence.xml" />
+    <None Include="en\Mono.Rocks\StreamConverter.xml" />
     <None Include="en\Mono.Rocks\StreamRocks.xml" />
     <None Include="en\Mono.Rocks\StringRocks.xml" />
     <None Include="en\Mono.Rocks\TextReaderRocks.xml" />
     <None Include="en\Mono.Rocks\Tuple.xml" />
+    <None Include="en\Mono.Rocks\TupleRocks.xml" />
     <None Include="en\Mono.Rocks\Tuple`1.xml" />
     <None Include="en\Mono.Rocks\Tuple`2.xml" />
     <None Include="en\Mono.Rocks\Tuple`3.xml" />
     <None Include="en\Mono.Rocks\Tuple`4.xml" />
-    <None Include="en\Mono.Rocks\TupleRocks.xml" />
+    <None Include="en\Mono.Rocks\UInt16Rocks.xml" />
+    <None Include="en\Mono.Rocks\UInt32Rocks.xml" />
+    <None Include="en\Mono.Rocks\UInt64Rocks.xml" />
+    <None Include="en\index.xml" />
+    <None Include="en\ns-Mono.Rocks.xml" />
+    <None Include="mono-rocks-docs.source" />
+    <None Include="prettyprint.js" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
