@@ -14,8 +14,11 @@
     </Attribute>
   </Attributes>
   <Docs>
-    <summary>To be added.</summary>
-    <remarks>To be added.</remarks>
+    <summary>
+      Extension and utility methods for <see cref="T:System.Nullable{T}"/>.
+    </summary>
+    <remarks>
+    </remarks>
   </Docs>
   <Members>
     <Member MemberName="Select&lt;TSource,TResult&gt;">
@@ -79,11 +82,37 @@
         <Parameter Name="self" Type="TValue" RefType="this" />
       </Parameters>
       <Docs>
-        <typeparam name="TValue">To be added.</typeparam>
-        <param name="self">To be added.</param>
-        <summary>To be added.</summary>
-        <returns>To be added.</returns>
-        <remarks>To be added.</remarks>
+        <typeparam name="TValue">
+         A <see langword="struct"/> to convert into a
+         <see cref="T:System.Nullable{TValue}"/>.
+        </typeparam>
+        <param name="self">
+         A <typeparamref name="TValue"/> which is the value to convert
+         into a <see cref="T:System.Nullable{TValue}"/>.
+        </param>
+        <summary>
+         Converts the value type value <paramref name="self"/> into a
+         Nullable value <see cref="T:System.Nullable{TValue}"/>.
+        </summary>
+        <returns>
+         Returns <paramref name="self"/> as a
+         <see cref="T:System.Nullable{TValue}"/>.
+        </returns>
+        <remarks>
+          <para>
+            This is particularly handy in creating a 
+            <see cref="T:System.Nullable{Mono.Rocks.Tuple{T1,T2}}"/>
+            for use from 
+            <see cref="M:Mono.Rocks.Sequence.GenerateReverse``2(``0,System.Func{``0,System.Nullable{Mono.Rocks.Tuple{``1,``0}}})"/>:
+          </para>
+          <code lang="C#">
+var ints = Sequence.GenerateReverse (10, b => b == 0
+    ? null
+    : Tuple.Create (b, b - 1).ToNullable ());
+foreach (int n in ints)
+  Console.WriteLine (n);  // writes 10, 9, ..., 2, 1</code>
+        </remarks>
+        <altmember cref="M:Mono.Rocks.Sequence.GenerateReverse``2(``0,System.Func{``0,System.Nullable{Mono.Rocks.Tuple{``1,``0}}})"/>
       </Docs>
     </Member>
   </Members>
