@@ -17,8 +17,11 @@
     </Attribute>
   </Attributes>
   <Docs>
-    <summary>To be added.</summary>
-    <remarks>To be added.</remarks>
+    <summary>
+      Extension methods for <see cref="T:System.UInt64"/>.
+    </summary>
+    <remarks>
+    </remarks>
   </Docs>
   <Members>
     <Member MemberName="IsEven">
@@ -39,10 +42,24 @@
         <Parameter Name="value" Type="System.UInt64" RefType="this" />
       </Parameters>
       <Docs>
-        <param name="value">To be added.</param>
-        <summary>To be added.</summary>
-        <returns>To be added.</returns>
-        <remarks>To be added.</remarks>
+        <param name="value">
+          A <see cref="T:System.UInt64"/> containing the value to check.
+        </param>
+        <summary>
+          Gets a value indicating whether <paramref name="value"/> is an even number.
+        </summary>
+        <returns>
+          <see langword="true"/> if <paramref name="value"/> is an even number;
+          otherwise, <see langword="false"/>.
+        </returns>
+        <remarks>
+          <para>
+            For purposes of this method, an even value is a number
+            evenly divisible by 2 and the number 0; all other numbers
+            are odd.
+          </para>
+        </remarks>
+        <altmember cref="M:Mono.Rocks.UInt64Rocks.IsOdd(System.UInt64)"/>
       </Docs>
     </Member>
     <Member MemberName="IsOdd">
@@ -63,10 +80,24 @@
         <Parameter Name="value" Type="System.UInt64" RefType="this" />
       </Parameters>
       <Docs>
-        <param name="value">To be added.</param>
-        <summary>To be added.</summary>
-        <returns>To be added.</returns>
-        <remarks>To be added.</remarks>
+        <param name="value">
+          A <see cref="T:System.UInt64"/> containing the value to check.
+        </param>
+        <summary>
+          Gets a value indicating whether <paramref name="value"/> is an odd number.
+        </summary>
+        <returns>
+          <see langword="true"/> if <paramref name="value"/> is an odd number;
+          otherwise, <see langword="false"/>.
+        </returns>
+        <remarks>
+          <para>
+            For purposes of this method, an even value is a number
+            evenly divisible by 2 and the number 0; all other numbers
+            are odd.
+          </para>
+        </remarks>
+        <altmember cref="M:Mono.Rocks.UInt64Rocks.IsEven(System.UInt64)"/>
       </Docs>
     </Member>
   </Members>
