@@ -1,5 +1,10 @@
 2008-09-01  Jonathan Pryor  <jpryor@novell.com>
 
+	* doc/doc.mdproj: Add additional XML documentation files.
+	* doc/en/**: Flush.
+
+2008-09-01  Jonathan Pryor  <jpryor@novell.com>
+
 	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Nullable.cs 
 	  to the build.
 	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add 
